# globular

./: meson.build
include/globular/: debug.hpp  entity.hpp  globular.hpp  math.hpp  window.hpp  world.hpp
include/globular/containers/: sparse_set.hpp
include/globular/math/: mat3.hpp  mat4.hpp  vec2.hpp  vec3.hpp  vec4.hpp
src/: debug.cpp  entity.cpp  meson.build  window.cpp  world.cpp
src/math/: mat3.cpp  mat4.cpp  meson.build  vec2.cpp  vec3.cpp  vec4.cpp
